@@ -1,8 +1,20 @@
-EXTRA_DIST = \
+MSVSCPP_FILES = \
 	libcerror/libcerror.vcproj \
 	libcnotify_dll/libcnotify_dll.vcproj \
 	libcstring/libcstring.vcproj \
 	libcnotify.sln
+
+SCRIPT_FILES = \
+	scripts/vs2008_x64.sh \
+	scripts/vs2008_x64_sln.sed \
+	scripts/vs2008_x64_vcproj.sed \
+	scripts/vs2010_x64.sh \
+	scripts/vs2010_x64_sln.sed \
+	scripts/vs2010_x64_vcxproj.sed
+
+EXTRA_DIST = \
+	$(MSVSCPP_FILES) \
+	$(SCRIPT_FILES)
 
 MAINTAINERCLEANFILES = \
 	Makefile.in
