@@ -1,3 +1,6 @@
+20130113
+* updated msvscpp files
+
 20130103
 * changes to .gitignore
 * 2013 update
